chore: Upgrade to node@20 and yarn@4.4.0

--- a/docs/whats-new.mdx
+++ b/docs/whats-new.mdx
@@ -9,6 +9,7 @@ A minor release that includes:
 - **[`Source`](/docs/developer-guide/using-sources) support** - Improvements for multi-step data loading.
 - **examples** - modernized to latest React and minimized boilerplate code.
 - **website** - more format examples are now available.
+- **Node.js** - Tests now run on Node 20.
 
 **@loaders.gl/core**
 
