--- a/docs/whats-new.mdx
+++ b/docs/whats-new.mdx
@@ -9,7 +9,7 @@ A minor release that includes:
 - **[`Source`](/docs/developer-guide/using-sources) support** - Improvements for multi-step data loading.
 - **examples** - modernized to latest React and minimized boilerplate code.
 - **website** - more format examples are now available.
-- **Node.js** - Tests now run on Node 20.
+- **Node.js v18, v20 & v22** - Supports the current set of Node.js LTS releases.
 
 **@loaders.gl/core**
 
