--- a/docs/whats-new.mdx
+++ b/docs/whats-new.mdx
@@ -22,7 +22,7 @@ A minor release that includes:
 
 **@loaders.gl/textures**
 
-- [`Comp[ressedTextureLoader]`](/docs/modules/textures/api-reference/compressed-texture-loader) - Now supports mipmaps in KTX2 textures.
+- [`CompressedTextureLoader`](/docs/modules/textures/api-reference/compressed-texture-loader) - Now supports mipmaps in KTX2 textures.
 
 
 ## v4.2
