Whats new updated

--- a/docs/whats-new.mdx
+++ b/docs/whats-new.mdx
@@ -27,6 +27,17 @@ A minor release that includes:
 
 - [`Comp[ressedTextureLoader]`](/docs/modules/textures/api-reference/compressed-texture-loader) - Now supports mipmaps in KTX2 textures.
 
+**@loaders.gl/3d-tiles**
+
+- 3DTiles 1.1 Writing
+- 3D Tiles 1.1 extensions supported: `EXT_mesh_features`, `EXT_structural_metadata`
+- converted `tile-conveter` to TypeScript
+
+**@loaders.gl/tile-converter**
+
+- Removed 'extemded SLPK' usage from the converter, `--slpk` is now a default behavior
+- Removed `slpk-extractor` tool
+- Added option `--egm=None` to disable egm conversion
 
 ## v4.2
 
