docs: Final 4.3 release docs

--- a/docs/whats-new.mdx
+++ b/docs/whats-new.mdx
@@ -1,16 +1,17 @@
 # What's New
 
-## v4.3 (in development)
+## v4.3
 
-Target Release Date: June 2024
+Release Date: October 15, 2024
 
 A minor release that includes:
 
-- **TypeScript improvements** - Typecript v5.6, loader and writer type inference improvements
-- **multi-step data loading** - See [`DataSource`](/docs/developer-guide/using-sources)
-- **examples** - modernized to latest React and minimized boilerplate code.
-- **website** - more format examples are now available.
-- **Node.js** - Tests now run on Node 20.
+- **TypeScript** - Typecript v5.6.
+- **Node.js** - Node.js v20 is now the primary supported Node.js version.
+- **Loader/Writer APIs** - Improved type inference for loader / writer options and return types.
+- **[`DataSource`](/docs/developer-guide/using-sources) API** Multi-step data loadingi mprovements. 
+- **Website** - Live examples are now available for more loaders / formats.
+- **Examples** - Migrated to React functional components. Minimized boilerplate code.
 
 **@loaders.gl/core**
 
@@ -21,7 +22,7 @@ A minor release that includes:
 
 **@loaders.gl/mvt**
 
-- [`TableTileSource`](/docs/modules/mvt/api-reference/table-tile-source) - tables can now be vector tiled dynamically in the app.
+- [`TableTileSource`](/docs/modules/mvt/api-reference/table-tile-source) - Geospatial tables can now be vector tiled dynamically in the browser.
 
 **@loaders.gl/textures**
 
@@ -29,15 +30,15 @@ A minor release that includes:
 
 **@loaders.gl/3d-tiles**
 
-- 3DTiles 1.1 Writing
-- 3D Tiles 1.1 extensions supported: `EXT_mesh_features`, `EXT_structural_metadata`
-- converted `tile-conveter` to TypeScript
+- **3D Tiles 1.1 Writing** [`Tile3DWriter`](/docs/modules/3d-tiles/api-reference/tile3d-writer) now supports writing 3DTiles 1.1
+- **3D Tiles 1.1 Extensions** `EXT_mesh_features` and `EXT_structural_metadata` are now supported.
 
 **@loaders.gl/tile-converter**
 
-- Removed 'extemded SLPK' usage from the converter, `--slpk` is now a default behavior
+- Removed 'extended SLPK' usage from the converter, `--slpk` is now a default behavior
 - Removed `slpk-extractor` tool
 - Added option `--egm=None` to disable egm conversion
+- `tile-conveter` source code has been converted to TypeScript
 
 ## v4.2
 
