--- a/docs/whats-new.mdx
+++ b/docs/whats-new.mdx
@@ -4,41 +4,7 @@
 
 Target Release Date: Q1 2025
 
-loaders.gl v4.4 will focus on cloud-native, binary data.
-A number of modules will expose "ArrowLoaders" will return binary data in the Apache Arrow and Apache GeoArrow formats.
-
-While no loader support has been removed, the flavor of the loaders.gl framework is changing. 
-
-**Apache Arrow as a core format**  
-  - Many new loaders now return binary data in the Apache Arrow format. 
-  - This aligns with parallel efforts in companion libraries like deck.gl (as well as the ecosystem at large) to work with zero-copy, compact binary data instead of bloated, deserialized javascript data structures.
-  - Binary columnar data brings in an order of magnitude better memory usage and improved load/processing performance on big datasets.
-  - The Apache Arrow JS library is now a central dependency of loaders.gl. 
-  
-**Improved `DataSource` APIs**
-  - The `Source` and `DataSource` APIs have matured and are now easier to work with.
-  - Consule the upgrade guide for migration details.
-
-**Single output format per loader**
-  - `<LoaderOptions>.shape` is deprecated.
-  - This will simplify loader implementations.
-  - Applications benefit from more predictable return types for loaders.
-  - When needed, applications can now instead use utilities in the `@loaders.gl/schema-utils` and `@loaders.gl/gis` modules to convert Apache Arrow and Apache GeoArrow to more traditional (but less efficient) JavaScript formats.
-
-Per-module changes
-
-- **`@loaders.gl/csv`**
-  - `CSVArrowLoader` - New CSV loader that returns Apache Arrow tables.
-
-- **`@loaders.gl/parquet`**
-  - `ParquetArrowLoader` now returns Apache Arrow tables and leverages the high-performance `parquet-wasm` library.
-  - The v4 Parquet loader is still available as `ParquetJSONLoader`
-
-- **`@loaders.gl/schema-utils`**
-  - New module for working with and converting Apache Arrow data.
-
-- **`@loaders.gl/gis`**
-  - Now provides support for working Apache GeoArrow data.
+See the [v4.4 Roadmap](/docs/roadmap) for more details.
 
 ## v4.3
 
@@ -70,7 +36,7 @@ A minor release that includes:
 
 **@loaders.gl/3d-tiles**
 
-- **3D Tiles 1.1 Writing** [`Tile3DWriter`](/docs/modules/3d-tiles/api-reference/tile3d-writer) now supports writing 3DTiles 1.1
+- **3D Tiles 1.1 Writing** [`Tile3DWriter`](/docs/modules/3d-tiles/api-reference/tile-3d-writer) now supports writing 3DTiles 1.1
 - **3D Tiles 1.1 Extensions** `EXT_mesh_features` and `EXT_structural_metadata` are now supported.
 
 **@loaders.gl/tile-converter**
