--- a/docs/whats-new.mdx
+++ b/docs/whats-new.mdx
@@ -2,9 +2,16 @@
 
 ## v4.4 (in development)
 
-Target Release Date: Q1 2025
+Target Release Date: Q1 2026
 
 See the [v4.4 Roadmap](/docs/roadmap) for more details.
+
+Highlights:
+- Light modernization of build tooling
+- Documentation: improvements
+- **TypeScript** Stricter types across code base
+
+
 
 ## v4.3
 
