Add MVT writer roundtrip support and tests

--- a/docs/whats-new.mdx
+++ b/docs/whats-new.mdx
@@ -6,6 +6,10 @@ Target Release Date: Q1 2025
 
 See the [v4.4 Roadmap](/docs/roadmap) for more details.
 
+**@loaders.gl/mvt**
+
+- `MVTWriter` now projects GeoJSON using optional `tileIndex` metadata and supports roundtrips with `MVTLoader`.
+
 ## v4.3
 
 Release Date: October 16, 2024
