Move shapefile whats-new note to v4.4

--- a/docs/whats-new.mdx
+++ b/docs/whats-new.mdx
@@ -6,6 +6,10 @@ Target Release Date: Q1 2025
 
 See the [v4.4 Roadmap](/docs/roadmap) for more details.
 
+**@loaders.gl/shapefile**
+
+- `ShapefileLoader` - Forwards `dbf` loader options (such as `workerUrl`) when loading sidecar files.
+
 ## v4.3
 
 Release Date: October 16, 2024
