feat(mvt): Experimental MVTWriter  (#3164)

--- a/docs/whats-new.mdx
+++ b/docs/whats-new.mdx
@@ -9,9 +9,11 @@ See the [v4.4 Roadmap](/docs/roadmap) for more details.
 Highlights:
 - Light modernization of build tooling
 - Documentation: improvements
-- **TypeScript** Stricter types across code base
+- **TypeScript** Stricter types across code base, migrate to ArrayBufferLike
 
+**@loaders.gl/mvt**
 
+- `MVTWriter` now projects GeoJSON using optional `tileIndex` metadata and supports roundtrips with `MVTLoader`.
 
 ## v4.3
 
