--- a/docs/whats-new.mdx
+++ b/docs/whats-new.mdx
@@ -7,13 +7,13 @@ Target Release Date: Q1 2026
 See the [v4.4 Roadmap](/docs/roadmap) for more details.
 
 **Highlights**
-- **Tooling** - CI optimizations
-- **TypeScript** Stricter types across code base, migrate to ArrayBufferLike
-- **Documentation** - Formatting cleanup, typos etc.
+- **Tooling** - @vis.gl/dev-tools@1.0, GitHub CI optimizations
+- **TypeScript** - Migrate API from `ArrayBuffer` to `ArrayBufferLike`
+- **Website** - docusaurus@3.9. Website search. 
 
 **All modules**
 
-- Worker bundles now exported explicitly in each module's package.json `exports` section.
+- Bundled workers now exported explicitly in each module's package.json `exports` section.
 
 **@loaders.gl/core**
 
