--- a/docs/whats-new.mdx
+++ b/docs/whats-new.mdx
@@ -6,14 +6,28 @@ Target Release Date: Q1 2026
 
 See the [v4.4 Roadmap](/docs/roadmap) for more details.
 
-Highlights:
-- Light modernization of build tooling
-- Documentation: improvements
+**Highlights**
+- **Tooling** - @vis.gl/dev-tools@1.0, GitHub CI optimizations
+- **TypeScript** - Migrate API from `ArrayBuffer` to `ArrayBufferLike`
+- **Website** - docusaurus@3.9. Website search. 
+- Modernized build tooling
 - **TypeScript** Stricter types across code base, migrate to ArrayBufferLike
+
+**All modules**
+
+- Bundled workers now exported explicitly in each module's package.json `exports` section.
+
+**@loaders.gl/core**
+
+- [`LoaderOptions.core`](/docs/modules/core/api-reference/loader-options) - stronger type checks when options are supplied through the new `options.core` sub-option object.
 
 **@loaders.gl/mvt**
 
-- `MVTWriter` now projects GeoJSON using optional `tileIndex` metadata and supports roundtrips with `MVTLoader`.
+- [`MVTWriter`](/docs/modules/mvt/api-reference/mvt-writer)  A new experimental writer that allows GeoJSON to be written in binary MVT tile format.
+
+**@loaders.gl/tile-converter**
+
+- `tile-converter` is now published as an "application", independently of loaders.gl modules.
 
 ## v4.3
 
