Add mesh-wide color normalization option

--- a/docs/whats-new.mdx
+++ b/docs/whats-new.mdx
@@ -33,6 +33,10 @@ See the [v4.4 Roadmap](/docs/roadmap) for more details.
 
 - `ShapefileLoader` - Forwards `dbf` loader options (such as `workerUrl`) when loading sidecar files.
 
+**Mesh loaders**
+
+- Mesh and point cloud loaders now honor `options.mesh.normalizeColors` to return normalized color values.
+
 ## v4.3
 
 Release Date: October 16, 2024
