--- a/docs/whats-new.mdx
+++ b/docs/whats-new.mdx
@@ -33,6 +33,11 @@ See the [v4.4 Roadmap](/docs/roadmap) for more details.
 
 - `ShapefileLoader` - Forwards `dbf` loader options (such as `workerUrl`) when loading sidecar files.
 
+**@loaders.gl/arrow**
+
+- Support for `apache-arrow@21`
+- A new documentation page about [Using with Apache Arrow](/docs/developer-guide/apache-arrow).
+
 **@loaders.gl/tile-converter**
 
 - `tile-converter` is now published as an "application", independently of loaders.gl modules.
